--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,10 @@
     		<artifactId>modelmapper</artifactId>
     		<version>3.2.1</version>
 		</dependency>
-
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -86,5 +89,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
