--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.3</version>
+		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springboot.blog</groupId>
@@ -96,7 +96,13 @@
     <version>0.12.6</version>
     <scope>runtime</scope>
 </dependency>
-	</dependencies>
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-junit-jupiter</artifactId>
+    <version>5.16.1</version>
+    <scope>test</scope>
+</dependency>
+</dependencies>
 
 	<build>
 		<plugins>
